bk_ida/gccida/c0/simplify_unary_operation
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:873:32: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:873:47: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                                              ^
                                              enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:873:74: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                                                                         ^
                                                                         enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:881:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code reversed; // [rsp+44h] [rbp-11Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:900:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_modea; // [rsp+144h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:902:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+150h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:903:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+154h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:926:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
lv = ( __int64)trueop[1]; 
               ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:930:35: error: too many arguments to function call, expected 2, have 3
real_value_truncate( &v23, modea, d); 
~~~~~~~~~~~~~~~~~~~               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/real.h:406:1: note: 'real_value_truncate' declared here
extern REAL_VALUE_TYPE real_value_truncate PARAMS ((enum machine_mode,
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:950:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
lv_0 = ( __int64)trueop[1]; 
                 ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:966:35: error: too many arguments to function call, expected 2, have 3
real_value_truncate( &v19, modea, d_0); 
~~~~~~~~~~~~~~~~~~~               ^~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/real.h:406:1: note: 'real_value_truncate' declared here
extern REAL_VALUE_TYPE real_value_truncate PARAMS ((enum machine_mode,
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:1049:25: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
l1 = ( unsigned __int64)trueop[1]; 
                        ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:1123:58: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( ( unsigned __int16)*( _DWORD *)trueop == 55 && mode_class_0[modea] == MODE_FLOAT ) 
                                                         ^~~~~~~~~~~~
                                                         mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:1137:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)trueop)] != MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/simplify-rtx.c:1138:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[modea] != MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_unary_operation/src/obj/simplify-rtx.o] Error 1
